docs/envoy/v1.12.0/_sources/api-v2/config/grpc_credential/v2alpha/aws_iam.proto.rst.txt
.. _envoy_api_file_envoy/config/grpc_credential/v2alpha/aws_iam.proto:

Grpc Credentials AWS IAM
========================

Configuration for AWS IAM Grpc Credentials Plugin

.. _envoy_api_msg_config.grpc_credential.v2alpha.AwsIamConfig:

config.grpc_credential.v2alpha.AwsIamConfig
-------------------------------------------

`[config.grpc_credential.v2alpha.AwsIamConfig proto] <https://github.com/envoyproxy/envoy/blob/v1.12.0/api/envoy/config/grpc_credential/v2alpha/aws_iam.proto#L13>`_


.. code-block:: json

  {
    "service_name": "...",
    "region": "..."
  }

.. _envoy_api_field_config.grpc_credential.v2alpha.AwsIamConfig.service_name:

service_name
  (`string <https://developers.google.com/protocol-buffers/docs/proto#scalar>`_, *REQUIRED*) The `service namespace
  <https://docs.aws.amazon.com/general/latest/gr/aws-arns-and-namespaces.html#genref-aws-service-namespaces>`_
  of the Grpc endpoint.
  
  Example: appmesh
  
  
.. _envoy_api_field_config.grpc_credential.v2alpha.AwsIamConfig.region:

region
  (`string <https://developers.google.com/protocol-buffers/docs/proto#scalar>`_) The `region <https://docs.aws.amazon.com/general/latest/gr/rande.html>`_ hosting the Grpc
  endpoint. If unspecified, the extension will use the value in the ``AWS_REGION`` environment
  variable.
  
  Example: us-west-2
  
  

