docs/envoy/v1.13.0/_sources/api-v2/config/grpc_credential/v2alpha/aws_iam.proto.rst.txt
.. _envoy_api_file_envoy/config/grpc_credential/v2alpha/aws_iam.proto:

Grpc Credentials AWS IAM
========================

.. _extension_envoy.grpc_credentials.aws_iam:


This extension may be referenced by the qualified name *envoy.grpc_credentials.aws_iam*

.. note::
  This extension is functional but has not had substantial production burn time, use only with this caveat.

  This extension does not operate on the data plane and hence is intended to be robust against untrusted traffic.

Configuration for AWS IAM Grpc Credentials Plugin

.. _envoy_api_msg_config.grpc_credential.v2alpha.AwsIamConfig:

config.grpc_credential.v2alpha.AwsIamConfig
-------------------------------------------

`[config.grpc_credential.v2alpha.AwsIamConfig proto] <https://github.com/envoyproxy/envoy/blob/v1.13.0/api/envoy/config/grpc_credential/v2alpha/aws_iam.proto#L14>`_


.. code-block:: json

  {
    "service_name": "...",
    "region": "..."
  }

.. _envoy_api_field_config.grpc_credential.v2alpha.AwsIamConfig.service_name:

service_name
  (`string <https://developers.google.com/protocol-buffers/docs/proto#scalar>`_, *REQUIRED*) The `service namespace
  <https://docs.aws.amazon.com/general/latest/gr/aws-arns-and-namespaces.html#genref-aws-service-namespaces>`_
  of the Grpc endpoint.
  
  Example: appmesh
  
  
.. _envoy_api_field_config.grpc_credential.v2alpha.AwsIamConfig.region:

region
  (`string <https://developers.google.com/protocol-buffers/docs/proto#scalar>`_) The `region <https://docs.aws.amazon.com/general/latest/gr/rande.html>`_ hosting the Grpc
  endpoint. If unspecified, the extension will use the value in the ``AWS_REGION`` environment
  variable.
  
  Example: us-west-2
  
  

